--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Constructo AI | ERP Construction & Fabrication Québec - Gestion de projets</title>
-    <meta name="description" content="Constructo AI : le logiciel de gestion tout-en-un pour les entrepreneurs en construction ET fabrication au Québec. Soumissions, facturation, suivi de projets, pointage, gestion d'équipe. 33+ modules, 61 conseillers IA disponibles 24/7. Conforme RBQ, CCQ, CWB, CSA W47.1. Essai gratuit 7 jours.">
+    <meta name="description" content="Constructo AI : le logiciel de gestion tout-en-un pour les entrepreneurs en construction ET fabrication au Québec. Soumissions, facturation, suivi de projets, pointage, gestion d'équipe. 33+ modules, 57 conseillers IA disponibles 24/7. Conforme RBQ, CCQ, CWB, CSA W47.1. Essai gratuit 7 jours.">
     <meta name="keywords" content="ERP construction, ERP fabrication, logiciel soudure Québec, logiciel construction Québec, gestion projet construction, gestion atelier fabrication, devis construction, devis soudure, comptabilité construction, RBQ, CCQ, CWB, CSA W47.1, CSA W47.2, AWS, Loi 16, IA construction, Constructo AI, logiciel entrepreneur, soumission construction, gestion chantier, gestion atelier soudure">
     <meta name="author" content="Sylvain Leduc - Constructo AI Inc.">
     <meta name="robots" content="index, follow">
@@ -27,7 +27,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://constructoai.ca/">
     <meta name="twitter:title" content="Constructo AI | ERP intelligent pour la construction et fabrication au Québec">
-    <meta name="twitter:description" content="Le logiciel de gestion tout-en-un pour les entrepreneurs en construction ET fabrication au Québec. 33+ modules, 61 conseillers IA 24/7. Conforme RBQ, CCQ, CWB, CSA W47.1.">
+    <meta name="twitter:description" content="Le logiciel de gestion tout-en-un pour les entrepreneurs en construction ET fabrication au Québec. 33+ modules, 57 conseillers IA 24/7. Conforme RBQ, CCQ, CWB, CSA W47.1.">
     <meta name="twitter:image" content="https://constructoai.ca/og-image.png">
     <meta name="twitter:site" content="@constructoai">
 
@@ -47,7 +47,7 @@
         "name": "Constructo AI",
         "applicationCategory": "BusinessApplication",
         "operatingSystem": "Web",
-        "description": "Logiciel de gestion tout-en-un pour les entrepreneurs en construction ET fabrication au Québec. Soumissions, facturation, suivi de projets, pointage, gestion d'équipe. 33+ modules, 61 conseillers IA disponibles 24/7. Conforme RBQ, CCQ, CWB, CSA W47.1 et Loi 16.",
+        "description": "Logiciel de gestion tout-en-un pour les entrepreneurs en construction ET fabrication au Québec. Soumissions, facturation, suivi de projets, pointage, gestion d'équipe. 33+ modules, 57 conseillers IA disponibles 24/7. Conforme RBQ, CCQ, CWB, CSA W47.1 et Loi 16.",
         "url": "https://constructoai.ca",
         "author": {
             "@type": "Person",
@@ -1969,7 +1969,7 @@
                 Regroupez toutes vos opérations au même endroit. <strong>33+ outils pensés pour votre réalité</strong> : faites vos soumissions avec plus de 140 items prêts à l'emploi, suivez vos projets et chantiers en temps réel, gérez votre facturation avec TPS/TVQ automatiques, pointez vos employés (61 métiers CCQ + postes de fabrication), gardez le contrôle sur vos sous-traitants, fournisseurs et inventaires. Tout ça dans un seul logiciel.
             </p>
             <p class="hero-description" style="margin-top: -15px;">
-                <strong>61 conseillers disponibles jour et nuit</strong> — comme avoir un estimateur, un comptable et un directeur à portée de main, 24 heures sur 24. <strong>Déjà conforme</strong> aux exigences de la RBQ, CCQ, CNESST <em>et</em> certifications soudure CWB, CSA W47.1. Occupez-vous de vos projets, on s'occupe de la paperasse.
+                <strong>57 conseillers disponibles jour et nuit</strong> — comme avoir un estimateur, un comptable et un directeur à portée de main, 24 heures sur 24. <strong>Déjà conforme</strong> aux exigences de la RBQ, CCQ, CNESST <em>et</em> certifications soudure CWB, CSA W47.1. Occupez-vous de vos projets, on s'occupe de la paperasse.
             </p>
             <div class="hero-buttons">
                 <a href="https://app.constructoai.ca/" class="btn btn-primary">
@@ -2006,7 +2006,7 @@
                     <div class="stat-label">Items construction & fabrication</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number">61</div>
+                    <div class="stat-number">57</div>
                     <div class="stat-label">Conseillers IA disponibles 24/7</div>
                 </div>
                 <div class="stat-item">
@@ -2093,7 +2093,7 @@
                         </svg>
                     </div>
                     <h4>Estimation par IA</h4>
-                    <p>Décrivez votre projet en quelques mots et l'IA génère une estimation complète en 30 secondes. Main-d'œuvre, matériaux et marges calculés automatiquement. 61 experts spécialisés disponibles 24/7 pour répondre à vos questions techniques.</p>
+                    <p>Décrivez votre projet en quelques mots et l'IA génère une estimation complète en 30 secondes. Main-d'œuvre, matériaux et marges calculés automatiquement. 57 experts spécialisés disponibles 24/7 pour répondre à vos questions techniques.</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">
@@ -2493,6 +2493,38 @@
                     <h4>Subventions Québec 2026</h4>
                     <p>Plus de 50 programmes de subventions pour entrepreneurs. PME, construction, énergie, formation, innovation. Le système vérifie automatiquement si vous êtes éligible et vous guide dans vos demandes.</p>
                 </div>
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <rect x="1" y="3" width="15" height="13"/>
+                            <polygon points="16,8 20,8 23,11 23,16 16,16 16,8"/>
+                            <circle cx="5.5" cy="18.5" r="2.5"/>
+                            <circle cx="18.5" cy="18.5" r="2.5"/>
+                        </svg>
+                    </div>
+                    <h4>Location d'équipement</h4>
+                    <p>Arrêtez d'acheter des équipements qui dorment dans votre cour. Gérez vos locations : contrats automatiques, tarifs dégressifs pour les longues durées, retours avec inspection. Le conseiller IA vous dit quand c'est payant de louer vs acheter. Fini les équipements oubliés chez un client.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M14.7 6.3a1 1 0 0 0 0 1.4l1.6 1.6a1 1 0 0 0 1.4 0l3.77-3.77a6 6 0 0 1-7.94 7.94l-6.91 6.91a2.12 2.12 0 0 1-3-3l6.91-6.91a6 6 0 0 1 7.94-7.94l-3.76 3.76z"/>
+                        </svg>
+                    </div>
+                    <h4>Maintenance préventive</h4>
+                    <p>Un équipement qui brise en plein chantier, ça coûte cher. Planifiez vos entretiens avant les bris : vidanges, inspections, pièces à changer. Le système vous alerte quand c'est le temps. Gardez l'historique complet de chaque machine. Le conseiller IA diagnostique vos problèmes et estime les coûts de réparation.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/>
+                            <path d="M9 22V12h6v10"/>
+                            <circle cx="12" cy="7" r="2"/>
+                        </svg>
+                    </div>
+                    <h4>Portail multi-entreprises</h4>
+                    <p>Vous avez plusieurs compagnies ou divisions? Chacune a son espace séparé avec ses propres données, clients et projets. Connexion sécurisée en 2 étapes. Vos chiffres ne se mélangent jamais. Parfait pour les entrepreneurs qui ont une compagnie de construction ET une compagnie de location, ou plusieurs divisions par métier.</p>
+                </div>
             </div>
         </div>
     </section>
@@ -2633,7 +2665,7 @@
                     <path d="M23 21v-2a4 4 0 0 0-3-3.87"/>
                     <path d="M16 3.13a4 4 0 0 1 0 7.75"/>
                 </svg>
-                61 experts IA spécialisés en construction
+                57 experts IA spécialisés en construction
             </h2>
             <p style="color: rgba(255,255,255,0.8); margin-bottom: 24px;">Posez vos questions techniques — estimation, normes, méthodes — et obtenez des réponses précises de professionnels du secteur</p>
             <div class="experts-grid">
@@ -2650,7 +2682,7 @@
                     <strong>Revêtement Extérieur</strong> - <span>Écran pare-pluie, vinyle, fibrociment, brique, pierre. Ventilation cavité, drainage intégré, jonctions critiques. Normes manufacturiers.</span>
                 </div>
                 <div class="expert-item">
-                    <strong>Finition Intérieure</strong> - <span>ASP Construction, cartes CCQ. Gypse niveaux 1-5, tirage de joints machine, planchers bois franc/LVP, moulures, faux-finis artistiques.</span>
+                    <strong>Gypse</strong> - <span>Licence RBQ spécialiste gypse. Cloisons acoustiques, plafonds techniques, murs coupe-feu, finitions niveaux 1-5, tirage de joints machine, solutions haute performance.</span>
                 </div>
                 <div class="expert-item">
                     <strong>Structure de Bois</strong> - <span>Expert CSA O86. Poutrelles, fermes de toit, murs préfabriqués, poutres LVL. Calcul des charges résidentiel/commercial, optimisation des coûts. Liste de prix complète intégrée.</span>
@@ -2662,7 +2694,13 @@
                     <strong>Toiture</strong> - <span>Normes AMCQ. Bardeaux asphalte, membrane élastomère, TPO/EPDM, métal architectural. Protection neige/glace Québec, ventilation optimale, imagerie thermique.</span>
                 </div>
             </div>
-            <p class="experts-more">+ 52 autres experts disponibles: Architecte, Ingénieur structure, Fondations, Excavation, Maçonnerie, Portes & Fenêtres, Armoires cuisine, Peintre, Escaliers, Conformité RBQ/CCQ, Estimateur, Subventions Québec, Fonds de prévoyance (Loi 16)...</p>
+            <p class="experts-more">+ 49 autres experts disponibles: Architecte, Ingénieur structure, Ingénieur métallurgie, Fondations, Excavation, Maçonnerie, Portes et Fenêtres, Armoires cuisine, Peintre, Escaliers, Structure d'acier, Métallurgie, Soudeur-monteur, RBQ et CCQ, Subventions et financement, Fonds de prévoyance, Après sinistre, Décontamination, Inspecteur bâtiment, Arpenteur-géomètre, Urbaniste, LEED...</p>
+            <div style="margin-top: 32px; padding: 20px 24px; background: rgba(255,255,255,0.15); border-radius: 12px; display: inline-block;">
+                <p style="color: white; margin: 0; font-size: 15px;">
+                    <strong>EXPERTS IA disponible en module autonome</strong> — Accédez aux 57 conseillers sans l'ERP complet pour seulement <strong>79,99$/mois</strong>.
+                    <a href="https://app.constructoai.ca/" style="color: #fbbf24; text-decoration: underline; margin-left: 8px;">Essayer gratuitement</a>
+                </p>
+            </div>
         </div>
     </section>
 
@@ -2726,7 +2764,7 @@
                             <polygon points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"/>
                         </svg>
                     </div>
-                    <h3>61 conseillers disponibles jour et nuit</h3>
+                    <h3>57 conseillers disponibles jour et nuit</h3>
                     <p>Une question sur une estimation? Un calcul de poutre? Besoin d'aide pour une soumission? Posez votre question et obtenez une réponse de quelqu'un qui connaît votre métier.</p>
                 </div>
                 <div class="why-card">
@@ -3028,7 +3066,7 @@
                     <svg class="faq-chevron" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M6 9l6 6 6-6"/></svg>
                 </div>
                 <div class="faq-answer">
-                    <p>Tout est inclus. Les 33+ outils (soumissions, projets, facturation, pointage, inventaire, et plus), les 61 conseillers pour vos questions techniques, votre espace sécurisé, le support par téléphone, et toutes les mises à jour. <strong>Tous vos employés peuvent l'utiliser</strong> — pas de frais supplémentaire par personne. C'est tout votre bureau de gestion, accessible de partout.</p>
+                    <p>Tout est inclus. Les 33+ outils (soumissions, projets, facturation, pointage, inventaire, et plus), les 57 conseillers pour vos questions techniques, votre espace sécurisé, le support par téléphone, et toutes les mises à jour. <strong>Tous vos employés peuvent l'utiliser</strong> — pas de frais supplémentaire par personne. C'est tout votre bureau de gestion, accessible de partout.</p>
                 </div>
             </div>
             <div class="faq-item">
@@ -3060,11 +3098,20 @@
             </div>
             <div class="faq-item">
                 <div class="faq-question">
+                    Est-ce que je peux avoir seulement les conseillers IA?
+                    <svg class="faq-chevron" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M6 9l6 6 6-6"/></svg>
+                </div>
+                <div class="faq-answer">
+                    <p>Oui! <strong>EXPERTS IA</strong> est disponible en module autonome à <strong>79,99$/mois</strong>. Vous avez accès aux 57 conseillers spécialisés et à la génération de soumissions par IA — sans l'ERP complet. Idéal si vous voulez seulement l'assistance technique et les estimations rapides. Le module TAKEOFF AI (mesure sur plans) est exclusif à l'abonnement ERP complet.</p>
+                </div>
+            </div>
+            <div class="faq-item">
+                <div class="faq-question">
                     Est-ce qu'il y a des frais cachés?
                     <svg class="faq-chevron" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M6 9l6 6 6-6"/></svg>
                 </div>
                 <div class="faq-answer">
-                    <p>Non. 139,99$ + taxes par mois, c'est tout. Pas de frais d'installation, pas de frais par utilisateur, pas de frais pour utiliser les conseillers. Vous avez 7 jours d'essai (carte de crédit requise, mais vous n'êtes pas facturé si vous annulez). La plateforme SEAOP pour les appels d'offres reste gratuite pour tout le monde.</p>
+                    <p>Non. L'ERP complet coûte 139,99$/mois, ou 79,99$/mois pour EXPERTS IA seul (les 57 conseillers + soumissions IA). Pas de frais d'installation, pas de frais par utilisateur, pas de frais cachés. Vous avez 7 jours d'essai (carte de crédit requise, mais vous n'êtes pas facturé si vous annulez). La plateforme SEAOP pour les appels d'offres reste gratuite pour tout le monde.</p>
                 </div>
             </div>
             <div class="faq-item">
@@ -3148,7 +3195,7 @@
                     </a>
                     <a href="https://app.constructoai.ca/" class="quick-action-btn green">
                         <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="10"/><path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"/><line x1="12" y1="17" x2="12.01" y2="17"/></svg>
-                        Comment fonctionnent les 61 conseillers?
+                        Comment fonctionnent les 57 conseillers?
                     </a>
                     <a href="https://app.constructoai.ca/" class="quick-action-btn pink">
                         <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><line x1="12" y1="1" x2="12" y2="23"/><path d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"/></svg>
@@ -3288,14 +3335,14 @@
                         <img src="logo.png" alt="Constructo AI" style="width: 36px; height: auto;">
                         Constructo AI
                     </a>
-                    <p>Le logiciel de gestion créé par un entrepreneur, pour les entrepreneurs en construction et fabrication. 33+ outils, 61 conseillers disponibles 24/7, portail client. Conforme RBQ, CCQ, CWB, CSA W47.1 et Loi 16.</p>
+                    <p>Le logiciel de gestion créé par un entrepreneur, pour les entrepreneurs en construction et fabrication. 33+ outils, 57 conseillers disponibles 24/7, portail client. Conforme RBQ, CCQ, CWB, CSA W47.1 et Loi 16.</p>
                 </div>
                 <div class="footer-section">
                     <h4>Explorer</h4>
                     <ul>
                         <li><a href="#fonctionnalites">Fonctionnalités</a></li>
                         <li><a href="#fabrication" style="color: var(--orange);">Fabrication</a></li>
-                        <li><a href="#experts">Les 61 conseillers</a></li>
+                        <li><a href="#experts">Les 57 conseillers</a></li>
                         <li><a href="#comparaison">Pourquoi Constructo AI</a></li>
                         <li><a href="#faq">Questions fréquentes</a></li>
                     </ul>
