--- a/index.html
+++ b/index.html
@@ -2182,7 +2182,7 @@
                         </svg>
                     </div>
                     <h4>Gestion de Dossiers</h4>
-                    <p>Regroupez tous les documents d'un projet au même endroit : plans, photos, contrats, factures. Suivez l'avancement avec une checklist de 12 étapes, de la demande reçue jusqu'au paiement. Liez vos devis et bons de travail. L'historique complet de chaque dossier est tracé automatiquement.</p>
+                    <p>Centralisez tous vos documents de projet (plans, photos, contrats, factures) avec stockage sécurisé. Suivez l'avancement avec une checklist de 12 étapes prédéfinies. Liez vos devis, bons de travail et bons de commande. Partagez un accès sécurisé aux sous-traitants via un lien temporaire (90 jours). Timeline automatique et 10 catégories de documents avec détection intelligente.</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">
@@ -2503,7 +2503,7 @@
                         </svg>
                     </div>
                     <h4>Location d'équipement</h4>
-                    <p>Arrêtez d'acheter des équipements qui dorment dans votre cour. Gérez vos locations : contrats automatiques, tarifs dégressifs pour les longues durées, retours avec inspection. Le conseiller IA vous dit quand c'est payant de louer vs acheter. Fini les équipements oubliés chez un client.</p>
+                    <p>Gérez votre flotte d'équipements avec 14 catégories préconfigurées. Contrats PDF automatiques avec TPS/TVQ, tarifs jour/semaine/mois et dégressifs. Inspections de retour avec photos et frais de dommages. Louez aussi vos employés CCQ (prêt de main-d'œuvre). Le conseiller IA analyse location vs achat et recommande les équipements selon votre projet.</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">
@@ -2512,7 +2512,7 @@
                         </svg>
                     </div>
                     <h4>Maintenance préventive</h4>
-                    <p>Un équipement qui brise en plein chantier, ça coûte cher. Planifiez vos entretiens avant les bris : vidanges, inspections, pièces à changer. Le système vous alerte quand c'est le temps. Gardez l'historique complet de chaque machine. Le conseiller IA diagnostique vos problèmes et estime les coûts de réparation.</p>
+                    <p>Évitez les bris coûteux en chantier. Planifiez vos entretiens préventifs et correctifs avec alertes automatiques (5 niveaux de priorité). Créez des fiches d'intervention PDF professionnelles. Gérez les pièces détachées avec déduction automatique du stock. Le conseiller IA diagnostique vos pannes, génère des checklists LOTO et estime pièces + main-d'œuvre.</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">
