--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Constructo AI | ERP Construction & Fabrication Québec - Gestion de projets</title>
-    <meta name="description" content="Constructo AI : le logiciel de gestion tout-en-un pour les entrepreneurs en construction ET fabrication au Québec. Soumissions, facturation, suivi de projets, pointage, gestion d'équipe. 33+ modules, 57 conseillers IA disponibles 24/7. Conforme RBQ, CCQ, CWB, CSA W47.1. Essai gratuit 7 jours.">
+    <meta name="description" content="Constructo AI : le logiciel de gestion tout-en-un pour les entrepreneurs en construction ET fabrication au Québec. Soumissions, facturation, suivi de projets, pointage, gestion d'équipe. 40+ modules, 57 conseillers IA disponibles 24/7. Conforme RBQ, CCQ, CWB, CSA W47.1. Essai gratuit 7 jours.">
     <meta name="keywords" content="ERP construction, ERP fabrication, logiciel soudure Québec, logiciel construction Québec, gestion projet construction, gestion atelier fabrication, devis construction, devis soudure, comptabilité construction, RBQ, CCQ, CWB, CSA W47.1, CSA W47.2, AWS, Loi 16, IA construction, Constructo AI, logiciel entrepreneur, soumission construction, gestion chantier, gestion atelier soudure">
     <meta name="author" content="Sylvain Leduc - Constructo AI Inc.">
     <meta name="robots" content="index, follow">
@@ -16,7 +16,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://constructoai.ca/">
     <meta property="og:title" content="Constructo AI | ERP intelligent pour la construction et fabrication au Québec">
-    <meta property="og:description" content="Gérez votre entreprise de construction OU de fabrication avec un seul logiciel. Soumissions rapides, facturation TPS/TVQ, suivi de projets, pointage des employés, gestion de stocks. 33+ modules. Conforme RBQ, CCQ, CWB, CSA W47.1. Essai gratuit 7 jours.">
+    <meta property="og:description" content="Gérez votre entreprise de construction OU de fabrication avec un seul logiciel. Soumissions rapides, facturation TPS/TVQ, suivi de projets, pointage des employés, gestion de stocks. 40+ modules. Conforme RBQ, CCQ, CWB, CSA W47.1. Essai gratuit 7 jours.">
     <meta property="og:image" content="https://constructoai.ca/og-image.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
@@ -27,7 +27,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://constructoai.ca/">
     <meta name="twitter:title" content="Constructo AI | ERP intelligent pour la construction et fabrication au Québec">
-    <meta name="twitter:description" content="Le logiciel de gestion tout-en-un pour les entrepreneurs en construction ET fabrication au Québec. 33+ modules, 57 conseillers IA 24/7. Conforme RBQ, CCQ, CWB, CSA W47.1.">
+    <meta name="twitter:description" content="Le logiciel de gestion tout-en-un pour les entrepreneurs en construction ET fabrication au Québec. 40+ modules, 57 conseillers IA 24/7. Conforme RBQ, CCQ, CWB, CSA W47.1.">
     <meta name="twitter:image" content="https://constructoai.ca/og-image.png">
     <meta name="twitter:site" content="@constructoai">
 
@@ -47,7 +47,7 @@
         "name": "Constructo AI",
         "applicationCategory": "BusinessApplication",
         "operatingSystem": "Web",
-        "description": "Logiciel de gestion tout-en-un pour les entrepreneurs en construction ET fabrication au Québec. Soumissions, facturation, suivi de projets, pointage, gestion d'équipe. 33+ modules, 57 conseillers IA disponibles 24/7. Conforme RBQ, CCQ, CWB, CSA W47.1 et Loi 16.",
+        "description": "Logiciel de gestion tout-en-un pour les entrepreneurs en construction ET fabrication au Québec. Soumissions, facturation, suivi de projets, pointage, gestion d'équipe. 40+ modules, 57 conseillers IA disponibles 24/7. Conforme RBQ, CCQ, CWB, CSA W47.1 et Loi 16.",
         "url": "https://constructoai.ca",
         "author": {
             "@type": "Person",
@@ -1966,7 +1966,7 @@
             <h1>Constructo AI</h1>
             <p class="hero-subtitle">Le logiciel de gestion conçu pour les entrepreneurs en <strong>construction</strong> et <strong>fabrication</strong> du Québec</p>
             <p class="hero-description">
-                Regroupez toutes vos opérations au même endroit. <strong>33+ outils pensés pour votre réalité</strong> : faites vos soumissions avec plus de 140 items prêts à l'emploi, suivez vos projets et chantiers en temps réel, gérez votre facturation avec TPS/TVQ automatiques, pointez vos employés (61 métiers CCQ + postes de fabrication), gardez le contrôle sur vos sous-traitants, fournisseurs et inventaires. Tout ça dans un seul logiciel.
+                Regroupez toutes vos opérations au même endroit. <strong>40+ outils pensés pour votre réalité</strong> : faites vos soumissions avec plus de 140 items prêts à l'emploi, suivez vos projets et chantiers en temps réel, gérez votre facturation avec TPS/TVQ automatiques, pointez vos employés (61 métiers CCQ + postes de fabrication), gardez le contrôle sur vos sous-traitants, fournisseurs et inventaires. Tout ça dans un seul logiciel.
             </p>
             <p class="hero-description" style="margin-top: -15px;">
                 <strong>57 conseillers disponibles jour et nuit</strong> — comme avoir un estimateur, un comptable et un directeur à portée de main, 24 heures sur 24. <strong>Déjà conforme</strong> aux exigences de la RBQ, CCQ, CNESST <em>et</em> certifications soudure CWB, CSA W47.1. Occupez-vous de vos projets, on s'occupe de la paperasse.
@@ -1998,7 +1998,7 @@
 
             <div class="stats-grid">
                 <div class="stat-item">
-                    <div class="stat-number">33+</div>
+                    <div class="stat-number">40+</div>
                     <div class="stat-label">Outils pour gérer vos projets</div>
                 </div>
                 <div class="stat-item">
@@ -2068,7 +2068,7 @@
     <section class="solution-section" id="fonctionnalites">
         <div class="solution-inner">
             <h2 class="section-title">Des outils faits pour votre métier</h2>
-            <p class="section-subtitle">33+ fonctionnalités pensées pour les entrepreneurs en construction ET fabrication</p>
+            <p class="section-subtitle">40+ fonctionnalités pensées pour les entrepreneurs en construction ET fabrication</p>
             <h3>Ce que vous utilisez tous les jours</h3>
 
             <div class="features-grid">
@@ -2455,17 +2455,6 @@
                         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
                             <polyline points="14,2 14,8 20,8"/>
-                            <path d="M9 15l2 2 4-4"/>
-                        </svg>
-                    </div>
-                    <h4>Métré sur Plans PDF</h4>
-                    <p>Téléversez vos plans PDF et mesurez directement à l'écran. Distance, surface, périmètre, angles — calibrez l'échelle et le logiciel calcule tout automatiquement. Associez vos mesures à des produits pour générer vos soumissions en un clic.</p>
-                </div>
-                <div class="feature-card">
-                    <div class="feature-icon">
-                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
-                            <polyline points="14,2 14,8 20,8"/>
                             <line x1="16" y1="13" x2="8" y2="13"/>
                             <line x1="16" y1="17" x2="8" y2="17"/>
                         </svg>
@@ -2534,7 +2523,7 @@
         <div class="solution-inner">
             <h2 class="section-title" style="color: var(--orange);">Nouveau : Module Fabrication</h2>
             <p class="section-subtitle" style="color: var(--gray-300);">Conçu spécifiquement pour les ateliers de fabrication métallique et entreprises de soudure du Québec</p>
-            <h3 style="color: var(--white);">18 postes de travail préconfigurés</h3>
+            <h3 style="color: var(--white);">18+ postes de travail répartis en 6 catégories</h3>
 
             <div class="features-grid">
                 <div class="feature-card" style="background: var(--gray-800); border-color: var(--gray-700);">
@@ -3066,7 +3055,7 @@
                     <svg class="faq-chevron" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M6 9l6 6 6-6"/></svg>
                 </div>
                 <div class="faq-answer">
-                    <p>Tout est inclus. Les 33+ outils (soumissions, projets, facturation, pointage, inventaire, et plus), les 57 conseillers pour vos questions techniques, votre espace sécurisé, le support par téléphone, et toutes les mises à jour. <strong>Tous vos employés peuvent l'utiliser</strong> — pas de frais supplémentaire par personne. C'est tout votre bureau de gestion, accessible de partout.</p>
+                    <p>Tout est inclus. Les 40+ outils (soumissions, projets, facturation, pointage, inventaire, et plus), les 57 conseillers pour vos questions techniques, votre espace sécurisé, le support par téléphone, et toutes les mises à jour. <strong>Tous vos employés peuvent l'utiliser</strong> — pas de frais supplémentaire par personne. C'est tout votre bureau de gestion, accessible de partout.</p>
                 </div>
             </div>
             <div class="faq-item">
@@ -3173,9 +3162,10 @@
                     </div>
 
                     <div class="chat-input-preview">
-                        <input type="text" placeholder="Ex: Comment créer un compte? C'est quoi Constructo AI?" disabled>
+                        <input type="text" placeholder="Pour discuter avec Sylvain, utilisez les options ci-dessous" disabled>
                         <button class="btn btn-primary" disabled>Envoyer</button>
                     </div>
+                    <p style="text-align: center; font-size: 12px; color: var(--gray-500); margin-top: 8px;">Aperçu du chat — Contactez Sylvain par téléphone, courriel ou via l'application</p>
                 </div>
 
                 <!-- Quick Actions -->
@@ -3335,7 +3325,7 @@
                         <img src="logo.png" alt="Constructo AI" style="width: 36px; height: auto;">
                         Constructo AI
                     </a>
-                    <p>Le logiciel de gestion créé par un entrepreneur, pour les entrepreneurs en construction et fabrication. 33+ outils, 57 conseillers disponibles 24/7, portail client. Conforme RBQ, CCQ, CWB, CSA W47.1 et Loi 16.</p>
+                    <p>Le logiciel de gestion créé par un entrepreneur, pour les entrepreneurs en construction et fabrication. 40+ outils, 57 conseillers disponibles 24/7, portail client. Conforme RBQ, CCQ, CWB, CSA W47.1 et Loi 16.</p>
                 </div>
                 <div class="footer-section">
                     <h4>Explorer</h4>
