--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 "priceCurrency": "CAD",
                 "priceValidUntil": "2026-12-31",
                 "availability": "https://schema.org/InStock",
-                "description": "57 conseillers IA specialises en construction, generation de soumissions par IA. Essai gratuit 7 jours. Option pay-as-you-go disponible."
+                "description": "57 conseillers IA specialises en construction, generation de soumissions par IA. Essai gratuit 7 jours."
             },
             {
                 "@type": "Offer",
@@ -2894,7 +2894,7 @@
             <p class="experts-more">+ 49 autres experts disponibles: Architecte, Ingénieur structure, Ingénieur métallurgie, Fondations, Excavation, Maçonnerie, Portes et Fenêtres, Armoires cuisine, Peintre, Escaliers, Structure d'acier, Métallurgie, Soudeur-monteur, RBQ et CCQ, Subventions et financement, Fonds de prévoyance, Après sinistre, Décontamination, Inspecteur bâtiment, Arpenteur-géomètre, Urbaniste, LEED...</p>
             <div style="margin-top: 32px; padding: 20px 24px; background: rgba(255,255,255,0.15); border-radius: 12px; display: inline-block;">
                 <p style="color: white; margin: 0; font-size: 15px;">
-                    <strong>EXPERTS IA disponible en module autonome</strong> — Accédez aux 57 conseillers sans l'ERP complet pour <strong>79,99$/mois</strong> ou en <strong>pay-as-you-go</strong> (payez seulement ce que vous utilisez).
+                    <strong>EXPERTS IA disponible en module autonome</strong> — Accédez aux 57 conseillers sans l'ERP complet pour <strong>79,99$/mois</strong> avec essai gratuit de 7 jours.
                     <a href="#tarifs" style="color: #fbbf24; text-decoration: underline; margin-left: 8px;">Voir les tarifs</a>
                 </p>
             </div>
@@ -3321,8 +3321,8 @@
                     </ul>
 
                     <div class="pricing-or">
-                        <strong>OU : Pay-as-you-go (paiement a l'usage)</strong>
-                        <p>Pas d'abonnement mensuel — payez uniquement quand vous utilisez l'IA. Facturation par tranches de 3,00$ selon votre consommation reelle.</p>
+                        <strong>Essai gratuit 7 jours</strong>
+                        <p>Testez tous les experts IA sans engagement. Annulez a tout moment pendant l'essai, aucun frais ne sera preleve.</p>
                     </div>
 
                     <a href="https://app.constructoai.ca/" class="btn btn-outline" style="border-color: var(--orange); color: var(--orange);">Essayer 7 jours gratuit</a>
@@ -3425,7 +3425,7 @@
                     <svg class="faq-chevron" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M6 9l6 6 6-6"/></svg>
                 </div>
                 <div class="faq-answer">
-                    <p>Oui! <strong>EXPERTS IA</strong> est disponible en module autonome à <strong>79,99$/mois</strong> (essai gratuit 7 jours). Vous avez accès aux 57 conseillers spécialisés et à la génération de soumissions par IA — sans l'ERP complet. Vous pouvez aussi choisir le <strong>pay-as-you-go</strong> (paiement à l'usage) : pas d'abonnement mensuel, vous payez uniquement quand vous utilisez l'IA, facturé par tranches de 3,00$. Idéal si vous avez des besoins occasionnels. Le module TAKEOFF AI (mesure sur plans) est exclusif à l'abonnement ERP complet.</p>
+                    <p>Oui! <strong>EXPERTS IA</strong> est disponible en module autonome à <strong>79,99$/mois</strong> (essai gratuit 7 jours). Vous avez accès aux 57 conseillers spécialisés et à la génération de soumissions par IA — sans l'ERP complet. Le module TAKEOFF AI (mesure sur plans) est exclusif à l'abonnement ERP complet.</p>
                 </div>
             </div>
             <div class="faq-item">
@@ -3434,7 +3434,7 @@
                     <svg class="faq-chevron" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M6 9l6 6 6-6"/></svg>
                 </div>
                 <div class="faq-answer">
-                    <p>Non. L'ERP complet coûte 139,99$/mois, ou 79,99$/mois pour EXPERTS IA seul (les 57 conseillers + soumissions IA). Pour les besoins occasionnels, EXPERTS IA offre aussi un mode <strong>pay-as-you-go</strong> : vous payez seulement ce que vous utilisez, par tranches de 3,00$, sans abonnement mensuel. Pas de frais d'installation, pas de frais par utilisateur, pas de frais cachés. Vous avez 7 jours d'essai (carte de crédit requise, mais vous n'êtes pas facturé si vous annulez). La plateforme SEAOP pour les appels d'offres reste gratuite pour tout le monde.</p>
+                    <p>Non. L'ERP complet coûte 139,99$/mois, ou 79,99$/mois pour EXPERTS IA seul (les 57 conseillers + soumissions IA). Pas de frais d'installation, pas de frais par utilisateur, pas de frais cachés. Vous avez 7 jours d'essai gratuit (carte de crédit requise, mais vous n'êtes pas facturé si vous annulez). La plateforme SEAOP pour les appels d'offres reste gratuite pour tout le monde.</p>
                 </div>
             </div>
             <div class="faq-item">
